crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/invalid_mutability/receive_function/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 7793] Error: Receive ether function must be payable, but is "nonpayable".
   ╭─[input.sol:5:5]
   │
 5 │     receive() external {}
   │     ──────────┬──────────  
   │               ╰──────────── Error occurred here.
───╯
